--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "consulta-dolar-venezuela": "^1.0.4",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
